# ZeroKernel

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  setup.sh
interfaces/: hal.h
kernel/: hal_wasm.cpp  kernel.cpp
